chapter2: know your dataset

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**chapter 02 End-to-End Machine Learning Project**"
+    "** chapter 02 End-to-End Machine Learning Project **"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,12 +241,19 @@
    "source": [
     "datapath = os.path.join(\"datasets\", \"housing\", \"\")\n",
     "housing = pd.read_csv(datapath + \"housing.csv\")\n",
-    "housing.head()"
+    "housing.head() # first 5 rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看到每个数据有10个属性值：经度、纬度、房龄中位数、总房间数、总我市数、人口数、家庭数、收入中位数、房价中位数以及离海距离。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,8 +283,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "数据集中共有20640个实例，我们注意到总房间数这一项只有20433个非空置，这意味着有207个街区缺少该项属性值，后面我们需要对其进行处理。\n",
+    "\n",
+    "从上面我们可以注意到“离大海距离”这一项不是数值，而是表示某项属性的字段，那么我们可以使用`value_counts()`方法查看该项中有哪些类别："
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1H OCEAN     9136\n",
+       "INLAND        6551\n",
+       "NEAR OCEAN    2658\n",
+       "NEAR BAY      2290\n",
+       "ISLAND           5\n",
+       "Name: ocean_proximity, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing[\"ocean_proximity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -445,18 +486,28 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing.describe()"
+    "housing.describe() # 显示数值类属性的概括"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`count`、`mean`、`std`、`min`和`max`都很好理解，需要注意的就是计算这些值时，是忽略空值的。\n",
+    "百分数指的是小于该值的百分比。例如：25%的房子年龄中位数小于18\n",
+    "\n",
+    "另一种快速了解数据的方法是画出每类数据的柱状图。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -481,6 +532,16 @@
     "housing.hist(bins=50, figsize=(20, 15))\n",
     "save_fig(\"attribute_histogram_plots\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意到柱状图中的一些点：\n",
+    "1. 首先，收入中位数不是以美元（USD）为单位，可知数据是家冷啊缩放调整的，过高收入会变成15（实际为15.0001），过低的会变为5（实际为0.499）。在机器学习中对数据进行了预处理很正常，但是我们要知道数据是如何进行处理的。\n",
+    "\n",
+    "2. 房屋年龄中位数和房屋价值中位数也都设了上限，"
    ]
   },
   {
