chapter2: create test data set

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -538,22 +538,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注意到柱状图中的一些点：\n",
+    "注意到柱状图中的一些特点：\n",
     "1. 首先，收入中位数不是以美元（USD）为单位，可知数据是家冷啊缩放调整的，过高收入会变成15（实际为15.0001），过低的会变为5（实际为0.499）。在机器学习中对数据进行了预处理很正常，但是我们要知道数据是如何进行处理的。\n",
     "\n",
-    "2. 房屋年龄中位数和房屋价值中位数也都设了上限，"
+    "2. 房屋年龄中位数和房屋价值中位数也都设了上限，对于后者可能是个严重的问题，因为这是我们的目标属性（label）。这样学习得到的模型预测的值可能不会超过这个上限。若需要明确的预测值，那么即使超过500000美元，我们可以有两个选项：\n",
+    "    - 对于设定了上限的数据，重新收集合适的标签\n",
+    "    - 将这些街区的数据从数据集（训练集和测试集）中移除\n",
+    "    \n",
+    "3. 属性具有不同的度量。这涉及到特征缩放的问题。\n",
+    "\n",
+    "4. 最后，许多柱状图的尾巴过长，对于机器学习的假设而言，会使检测规律变得更难。我们会尝试变换处理这些属性，使其变为正态分布。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 数据"
+    "## 创建测试集\n",
+    "\n",
+    "在进一步查看数据之前，我们需要将测试集分割出来，这是因为我们的大脑是一个善于发现规律的系统，如果提前查看了测试集，就会不经意的按照测试集中规律来选择某个特定的机器学习模型，当你使用测试集来评估模型时，就会使结果过于乐观，而实际部署的系统表现就会差，这称为数据透视偏差。\n",
+    "\n",
+    "理论上，创建测试集只需要随机挑选一些实例，为整个数据集的20%。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -584,6 +594,88 @@
     "train_set, test_set = split_train_test(housing, 0.2)\n",
     "print(len(train_set), \"train +\", len(test_set), \"test\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "若不设定固定的随机数种子，那么每次就会产生不同的测试集，多次运行之后，你可能就会得到整个数据集，这是需要避免的。\n",
+    "\n",
+    "解决方法之一就是设定固定的随机数种子，以产生相同的洗牌指数（shuffled indices）。\n",
+    "\n",
+    "但若数据集更新了，该方法就会失效。一种通常的解决办法就是使用每个实例的ID（每个实例ID固定且唯一）来判断该实例是否应该放入测试集中。\n",
+    "例如：可以计算出每个实例ID的哈希值，只保留其最后一个字节，若该字节小于51（约为256的20%），就将其放入测试集中，这样可以保证在多次运行中测试集保持不变，即使更新了数据集，新的测试集中会包含新实例中的20%，但不会有之前位于测试集中的实例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "def test_set_check(identifier, test_ratio, hash):\n",
+    "    return hash(np.int64(identifier)).digest()[-1] < 256 * test_ratio\n",
+    "\n",
+    "def split_train_test_by_id(data, test_ratio, id_column, hash=hashlib.md5):\n",
+    "    ids = data[id_column]\n",
+    "    in_test_set = ids.apply(lambda id_: test_set_check(id_, test_ratio, hash))\n",
+    "    return data.loc[~in_test_set], data.loc[in_test_set]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用行索引作为ID\n",
+    "housing_with_id = housing.reset_index() # add an \"index\" column\n",
+    "train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"index\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这里使用行索引作为唯一识别码，那么需要保证新数据置于现有数据的尾部，且没有行被删除。若做不到，则可以使用最稳定的特征来创建唯一识别码，例如街区的经度和纬度在几百万年内基本是不会改变的，所以可以讲两者结合成一个ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_with_id[\"id\"] = housing[\"longitude\"] * 1000 + housing[\"latitude\"]\n",
+    "train_set, test_set = split_train_test_by_id(housing_with_id, 0.2, \"id\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`scikit-learn` 提供了一些函数，可以用多种方式将数据集分割为多个子集。最简单的函数是 `train_test_split`，它的作用和之前的函数 `split_train_test`很像，并带有其他的一些功能。首先，其`random_state`参数可以设定随机数种子；第二，可以将种子函数传递给多个行数相同的数据集，可以在相同的索引上分割数据集。这个功能非常有用，当你的标签值放在另一个`DataFrame`中的时候。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_set, test_set = train_test_split(housing, test_size=0.2, random_state=2018)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
