chapter2: prepare the data, data cleaning

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -1329,6 +1329,270 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 为机器学习算法准备数据\n",
+    "\n",
+    "为了保证数据处理的通用性，你需要编写一些函数：\n",
+    "\n",
+    "- 函数可以让你在任何数据集上方便的进行数据转换\n",
+    "- 可以慢慢积累为一个转换函数库，在以后的项目中复用\n",
+    "- 可以方便的尝试多种数据转换，查看哪些数据转换结合起来效果最好\n",
+    "\n",
+    "在此之前，我们回到干净的训练集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
+    "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 数据清洗\n",
+    "\n",
+    "大多数的机器学习算法不能处理缺失的特征属性，因此需要现对数据集中的缺失数据进行处理。前面在对数据初步认识过程中，我们注意到属性`total_bedrooms`有一些缺失值，现在有3中解决方案：\n",
+    "\n",
+    "- 去掉对应的街区\n",
+    "\n",
+    "- 去掉整个属性\n",
+    "\n",
+    "- 对缺失值进行填充（0、均值、中位数等）\n",
+    "\n",
+    "用`DataFrame`的`dropna()`,`drop()`和`fillna()`方法，可以方便的实现上述三种方案："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "969       471.0\n",
+       "6669      459.0\n",
+       "1        1106.0\n",
+       "16519      84.0\n",
+       "13900    2634.0\n",
+       "7214      219.0\n",
+       "17746     415.0\n",
+       "11258    1081.0\n",
+       "17157     134.0\n",
+       "7530      200.0\n",
+       "13163     782.0\n",
+       "19014      35.0\n",
+       "13053    1819.0\n",
+       "281       336.0\n",
+       "13972    1985.0\n",
+       "537       368.0\n",
+       "15954     506.0\n",
+       "7329      177.0\n",
+       "17757     415.0\n",
+       "13335     374.0\n",
+       "6295      472.0\n",
+       "6013      491.0\n",
+       "5844     1985.0\n",
+       "4246      416.0\n",
+       "2356      353.0\n",
+       "8949      502.0\n",
+       "19911     308.0\n",
+       "20226     932.0\n",
+       "17859     513.0\n",
+       "3120      316.0\n",
+       "          ...  \n",
+       "5158      304.0\n",
+       "14564     544.0\n",
+       "7314      556.0\n",
+       "4746      419.0\n",
+       "6518     1485.0\n",
+       "20040     165.0\n",
+       "4087      909.0\n",
+       "3237       78.0\n",
+       "6651      407.0\n",
+       "12450     174.0\n",
+       "14925     380.0\n",
+       "10221     626.0\n",
+       "9234      253.0\n",
+       "9788      162.0\n",
+       "17453     383.0\n",
+       "616       223.0\n",
+       "14534     463.0\n",
+       "4082      546.0\n",
+       "17572     254.0\n",
+       "6694      549.0\n",
+       "20201     411.0\n",
+       "7248      332.0\n",
+       "10161     347.0\n",
+       "1096      422.0\n",
+       "6112      391.0\n",
+       "8401      410.0\n",
+       "18565     589.0\n",
+       "15083    1152.0\n",
+       "14570     501.0\n",
+       "7435      271.0\n",
+       "Name: total_bedrooms, Length: 16512, dtype: float64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.dropna(subset=[\"total_bedrooms\"])\n",
+    "housing.drop(\"total_bedrooms\", axis=1)\n",
+    "median = housing[\"total_bedrooms\"].median()\n",
+    "housing[\"total_bedrooms\"].fillna(median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " `scikit-learn`提供了一个方便的类来处理缺失值：`Imputer`。\n",
+    " \n",
+    " 首先创建一个`Imputer`实例，指定用某属性的中位数来代替该属性中的缺失值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "imputer = Imputer(strategy=\"median\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为只有数值属性才能计算中位数，我们需要创建一份不包括`ocean_proximity`属性的数据副本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_num = housing.drop(\"ocean_proximity\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 将数据传递给 imputer.fit() 方法\n",
+    "imputer.fit(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "imputer 计算出每个属性的中位数，并将结果保存在实例变量`statistics_`中。虽然此时只有属性`total_bedrooms`存在缺失值，但我们不能确定在以后的新的数据中会不会有其他属性出现缺失值，所以安全的做法是将`imputer`应用到每个数值属性："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-118.49  ,   34.26  ,   29.    , 2127.    ,  435.    , 1166.    ,\n",
+       "        410.    ,    3.5333])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.statistics_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-118.49  ,   34.26  ,   29.    , 2127.    ,  435.    , 1166.    ,\n",
+       "        410.    ,    3.5333])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_num.median().values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在，可以使用这个填充过的`imputer`来对训练集进行转换，将缺失值替换为中位数："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = imputer.transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这里返回的结果`X`是一个包含转换后特征的普通`NumPy`数组，如果将其放到Pandas的`DataFrame`中，也很简单："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1383,7 +1647,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
