--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -1593,6 +1593,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 处理文本和类别属性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为`ocean_proximity`是文本属性，无法计算中位数，所在在前面的处理中我们将其丢弃了。大多数的机器学习算法是和数字打交道的，所以需要将这些文本标签转换为数字。\n",
+    "\n",
+    "`scikit-learn`为这个任务提供了一个转换器`LabelEncoder`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 3, ..., 0, 4, 0])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "encoder = LabelEncoder()\n",
+    "housing_cat = housing[\"ocean_proximity\"]\n",
+    "housing_cat_encoded = encoder.fit_transform(housing_cat)\n",
+    "\n",
+    "housing_cat_encoded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "编码器是通过属性`classes_`来学习的。\n",
+    "`<1H OCEAN` 被映射为0，`INLAND` 被映射为1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<1H OCEAN' 'INLAND' 'ISLAND' 'NEAR BAY' 'NEAR OCEAN']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encoder.classes_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这种编码方式的问题是，ML算法后认为两个相邻的值更相似，这样显然不对（例如，分类0和4比0和1更相似）。\n",
+    "\n",
+    "要解决这个问题，常用的方法是给每个分类创建一个二元属性。称为One-hot编码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<16512x5 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16512 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "encoder = OneHotEncoder()\n",
+    "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1, 1))\n",
+    "housing_cat_1hot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
