--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -747,7 +747,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a30ae84a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x119803ef0>"
       ]
      },
      "execution_count": 19,
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,28 +1123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "median_house_value          1.000000\n",
-       "median_income               0.691643\n",
-       "rooms_per_household         0.146850\n",
-       "total_rooms                 0.133672\n",
-       "housing_median_age          0.106523\n",
-       "households                  0.067060\n",
-       "total_bedrooms              0.049535\n",
-       "population                 -0.020910\n",
-       "population_per_household   -0.032251\n",
-       "longitude                  -0.051276\n",
-       "latitude                   -0.140561\n",
-       "bedrooms_per_room          -0.256945\n",
+       "median_house_value    1.000000\n",
+       "median_income         0.691643\n",
+       "total_rooms           0.133672\n",
+       "housing_median_age    0.106523\n",
+       "households            0.067060\n",
+       "total_bedrooms        0.049535\n",
+       "population           -0.020910\n",
+       "longitude            -0.051276\n",
+       "latitude             -0.140561\n",
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1284,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1439,7 @@
        "Name: total_bedrooms, Length: 16512, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,9 +1462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pzhang/anaconda3/lib/python3.6/site-packages/sklearn/utils/deprecation.py:58: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import Imputer\n",
     "\n",
@@ -1483,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1507,7 @@
        "Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1536,7 @@
        "        410.    ,    3.5333])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1557,7 @@
        "        410.    ,    3.5333])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1625,7 @@
        "array([1, 1, 3, ..., 0, 4, 0])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1686,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,9 +1694,95 @@
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "encoder = OneHotEncoder()\n",
+    "encoder = OneHotEncoder(categories=\"auto\")\n",
     "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1, 1))\n",
     "housing_cat_1hot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "输出是一个`SciPy`稀疏矩阵，而不是NumPy数组。当类别属性有很多歌分类时，这样非常有用。经过one-hot编码后，得到的矩阵每行只有一个1，其余都为0，因此使用稀疏矩阵进行存储。当然，也可使使用`toarray()`方法将其转换为普通NumPy数组："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       ...,\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_1hot.toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "要一步完成这两个转换，可以使用`LabelBinarizer`类"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       ...,\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "cat_encoder = LabelBinarizer()\n",
+    "housing_cat_reshaped = housing_cat.values.reshape(-1, 1)\n",
+    "housing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\n",
+    "\n",
+    "housing_cat_1hot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "返回的默认是一个稠密NumPy数组，向构造器`LabelBinarizer`传入`sparse_output=True`即可得到稀疏矩阵。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 自定义转换器"
    ]
   },
   {
