chapter2: prepare the data, feature scaling

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -1786,6 +1786,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "尽管scikit-learn提供了许多有用的转换器，有时候还是需要手动写转换器，比如自定义的清理操作或属性操作等。需要将自定义的转换器与scikit-learn组建无缝衔接工资，你需要创建一个类，并执行三个方法：`fit()`（返回self），`transform()` 和 `fit_transform()`。\n",
+    "\n",
+    "通过添加`TransformerMixin` 作为基类，可以很容易的得到最后一个。如果你添加了`BaseEstimator`作为基类（且构造器中避免使用`*args`和`**kargs`），可以得到两个额外的方法`get_params()` 和`set_params()`，二者可以方便的对超参数进行微调"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombineAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room=True): # no *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "        \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                        bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np_c[X, rooms_per_household, population_per_household]\n",
+    "        \n",
+    "attr_adder = CombineAttributesAdder(add_bedrooms_per_room=True)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在这个例子中，转换器有一个超参数 `add_bedrooms_per_room` ，默认设为 `True` （提供一个合 理的默认值很有帮助）。这个超参数可以让你方便地发现添加了这个属性是否对机器学习算法有帮助。更一般地，你可以为每个不能完全确保的数据准备步骤添加一个超参数。数据准 备步骤越自动化，可以自动化的操作组合就越多，越容易发现更好用的组合（并能节省大量时间）。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 特征缩放"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
