chapter2: started <select and train a model>

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "# execute once！\n",
-    "fetch_housing_data()"
+    "# fetch_housing_data()"
    ]
   },
   {
@@ -747,7 +747,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119803ef0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1143142e8>"
       ]
      },
      "execution_count": 19,
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
        "       [1, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1836,240 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 特征缩放"
+    "### 特征缩放\n",
+    "\n",
+    "数据要做的最重要的转换之一是特征缩放。一般而言，当输入的数值属性的量度不同时，机器学习算法的性能不会太好。这个规律也适用于房产数据：总房间数分布范围是6到39320，而收入中位数只分布在0到15。\n",
+    "\n",
+    "需要注意的是，不要对目标值进行了缩放！\n",
+    "\n",
+    "有两种常见的方法可以让所有的属性具有相同的度量：\n",
+    "\n",
+    "- 线性归一化（Min-Max Scaling）\n",
+    "- 标准化(Standardlization)\n",
+    "\n",
+    "线性函数归一化，也称为归一化（normalization）很简单：值被转换、重新缩放，直到范围变为0到1。通过减去最小值，然后除以最大最小值之间的差来进行归一化。`scikit-learn`提供了一个转换器`MinMaxScaler` 来实现这一功能，它有一个超参数`feature_range`，可以让你改变归一化范围。\n",
+    "\n",
+    "标准化计算过程：减去均值，然后除以方差，使得到的分布具有单位方差。与归一化不同，标准化不会限定值在某一固定范围，但对某些算法可能是个问题，例如神经网络常需要输入值在0到1之间。但是标准化受异常值的影响很小。`scikit-learn`提供了一个转换器`StandardScaler`来进行了标准化。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 转换管道 （Transformation Pipelines）\n",
+    "\n",
+    "在数据处理中，存在许多数据需要转换，需要按照一定的顺序进行。`scikit-learn`提供了类`Pipeline`来进行了这一系列的转换"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"attribs_adder\", CombineAttributesAdder()),\n",
+    "    (\"std_scaler\", StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "housing_num_tr = num_pipeline.fit_transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Pipeline` 构造器需要定义步骤顺序的名字的列表，除了最后一个估计器，其余都是转换器（要有`fit_transform()`方法）。\n",
+    "\n",
+    "当调用管道的`fit()`方法时，就会对所有的转换器依次调用 `fit_transform()`，将每次调用的输出作为下一个转换器的输入，一直到最后的估计器，它只调用`fit()`方法。\n",
+    "\n",
+    "在上面的例子中，最后的估计器是`StandardScaler`，它是一个转换器，因此这个管道有一个`transform()`方法，可以顺序对数据进行转换。\n",
+    "\n",
+    "上述是针对数值属性的管道流水线。那么对于分类属性怎么将其转换为管道流水线呢？`scikit-learn` 提供了一个`FeatureUnion` 来实现这一功能。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute_names):\n",
+    "        self.attribute_names = attribute_names\n",
+    "        \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute_names].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(num_attribs)),\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombineAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(cat_attribs)),\n",
+    "    ('cat_encoder', OneHotEncoder(sparse=False)),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import FeatureUnion\n",
+    "\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "    ('num_pipeline', num_pipeline),\n",
+    "    ('cat_pipeline', cat_pipeline),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以很简单的运行这个流水线："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.15875827,  0.95428517, -0.69249925, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.72766542, -0.688506  ,  1.85418832, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.32344606,  1.04321119, -0.61291526, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [ 1.30157739, -1.32502907, -0.77208323, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 1.17681392, -1.31098812,  0.50126055, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 0.68774111, -0.78679265,  1.21751643, ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared = full_pipeline.fit_transform(housing)\n",
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "实际上，从`scikit-learn` 0.20 版本开始，利用 `ColumnTransformer` 可以更好地完成这类任务："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.15875827,  0.95428517, -0.69249925, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.72766542, -0.688506  ,  1.85418832, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.32344606,  1.04321119, -0.61291526, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [ 1.30157739, -1.32502907, -0.77208323, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 1.17681392, -1.31098812,  0.50126055, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 0.68774111, -0.78679265,  1.21751643, ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "\n",
+    "new_full_pipeline = ColumnTransformer([\n",
+    "    ('num', num_pipeline, num_attribs), # 数值类属性\n",
+    "    ('cat', OneHotEncoder(), cat_attribs), # 类别属性\n",
+    "])\n",
+    "\n",
+    "new_housing_prepared = new_full_pipeline.fit_transform(housing)\n",
+    "new_housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(housing_prepared, new_housing_prepared)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看到结果和前面利用`FeatureUnion`得到的完全一样。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 选择和训练模型"
    ]
   },
   {
@@ -1894,7 +2127,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
