--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -747,7 +747,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1143142e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11d413828>"
       ]
      },
      "execution_count": 19,
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1978,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2069,7 +2069,371 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 选择和训练模型"
+    "## 选择和训练模型\n",
+    "\n",
+    "可算到这一步了！前面我们在问题定位，数据获取，尤其是数据准备和清洗上花费了大量的工作，这一切都是为了利用ML算法来训练模型作准备。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 在训练集上训练和评估"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在就有了一个可用的线性回归模型，可以用训练集中一些实例来进行验证"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions\t [268478.32039884 258639.21943233 434586.07032975  89265.05336872\n",
+      "  91628.93892293]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "print(\"Predictions\\t\", lin_reg.predict(some_data_prepared))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lables:\t\t [247900.0, 325600.0, 358500.0, 101800.0, 51300.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Lables:\\t\\t\", list(some_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "尽管可以预测，但是结果不怎么准确。可以使用`mean_squared_error`函数，用全部训练集来计算这个模型的RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67432.30583287157\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "print(lin_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "虽然结果不太好，但总比没有强。大多数街区的`median_housing_values`在120000到265000美元之间，因此预测误差67432美元不能让人满意。这是一个模型欠拟合的例子，意味着特征没有提供足够多的信息来做一个好的预测，或者模型不够强大。解决欠拟合主要有两个方法：\n",
+    "\n",
+    "- 选择更复杂的模型\n",
+    "- 去掉模型上的限制\n",
+    "\n",
+    "在线性回归模型中，没有正则化，所以排除第二种选项。可以尝试添加更多特性。在此之前，我们先尝试一个更为复杂的模型来看看效果："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_predictions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看到，这个模型对训练数据可以完全拟合！但这通常意味着严重的过拟合。要避免此种情况：\n",
+    "\n",
+    "1. 正则化\n",
+    "2. 交叉验证"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 利用交叉验证做更佳的评估\n",
+    "\n",
+    "交叉验证的思想是利用大部分的训练集来进行训练，余下的一小部分用来验证模型。通常使用的交叉验证方法有：\n",
+    "\n",
+    "1. S-fold cross-validtion\n",
+    "2. boostraping\n",
+    "\n",
+    "S折交叉验证就是每次将训练集随机的分成S个大小相同的子集，然后选择S-1个子集作为训练集，余下的1个子集作为验证集。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [70564.38284771 70783.86198474 69064.50182465 69291.07142308\n",
+      " 70359.71181748 69494.62386325 65931.48100901 64812.34393899\n",
+      " 71607.28102549 67081.75786453]\n",
+      "Mean: 68899.10175989286\n",
+      "Standard deviation: 2124.613943689646\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 显示结果\n",
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard deviation:\", scores.std())\n",
+    "    \n",
+    "display_scores(tree_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在决策树就不像前面看起来那么好了。实际上比线性回归模型还糟。交叉验证不仅可以得到模型性能的评估，还能测量评估的准确性（即它的标准差）。\n",
+    "\n",
+    "下面我们用线性回归模型计算其交叉验证的结果："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [68088.50380254 68705.92092583 69257.07268988 67269.63514852\n",
+      " 68249.01636742 65997.12297523 68501.8803486  62910.88766225\n",
+      " 68245.48542505 69139.40370576]\n",
+      "Mean: 67636.49290510833\n",
+      "Standard deviation: 1813.3236185762178\n"
+     ]
+    }
+   ],
+   "source": [
+    "lin_scores = cross_val_score(lin_reg, housing_prepared, housing_labels,\n",
+    "                            scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "\n",
+    "display_scores(lin_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "比较后发现决策树模型过拟合很严重。它的性能比线性模型还差。\n",
+    "\n",
+    "现在再尝试最后一个模型：`RandomForestRegressor`。随机森林是通过用特征的随机子集训练许多决策树。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pzhang/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/forest.py:248: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22143.89227787708\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(housing_prepared, housing_labels)\n",
+    "forest_predictions = forest_reg.predict(housing_prepared)\n",
+    "forest_mse = mean_squared_error(housing_labels, forest_predictions)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "\n",
+    "print(forest_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [52788.65401227 52854.42994412 54656.27720209 52970.5516252\n",
+      " 52557.9146909  51168.60365218 52498.4623593  48818.50308575\n",
+      " 50402.81448634 55460.03590944]\n",
+      "Mean: 52417.62469675786\n",
+      "Standard deviation: 1830.3395020252187\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_labels,\n",
+    "                               scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "forest_rmse_scores = np.sqrt(-forest_scores)\n",
+    "\n",
+    "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "随机森林模型看起来好多了。但是训练集的误差仍然比验证集低得多。解决过拟合可以简化模型，给模型加限制（正则化），或使用更多的训练数据。在深入随机森林之前，我们应该尝试下机器学习的其他类型模型（SVM，神经网络等），不要在调节超参数花费太多时间。目标是列出可能模型的列表。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tips：要保存每个试验过的模型，以便后续可以再用。要确保有超参数和训练参数， 以及交叉验证评分，和实际的预测值。这可以让你比较不同类型模型的评分，还可以比较误差种类。你可以用 Python 的模块 `pickle` ，非常方便地保存 `Scikit-Learn` 模型，或 使用 `sklearn.externals.joblib` ，后者序列化大 `NumPy` 数组更有效率\n",
+    "\n",
+    "``` python\n",
+    "from sklearn,external import joblib\n",
+    "\n",
+    "joblib.dump(my_model, \"my_model.pkl\")\n",
+    "\n",
+    "my_model_loaded = joblib.load(\"my_model.pkl\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 模型微调"
    ]
   },
   {
