chapter2: Launch,Monitor and Maintain Your System

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -2433,7 +2433,320 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 模型微调"
+    "## 模型微调\n",
+    "\n",
+    "现在有一个列表里，列表里有几个希望的模型。你现在需要对它们微调，下面列举几种微调的方法。\n",
+    "\n",
+    "### 网格搜索\n",
+    "\n",
+    "`GridSearchCV` 进行网格搜索，你需要告诉要试验哪些超参数，要试验什么值，`GridSearchCV`就能利用交叉验证试验所有可能超参数值的组合。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators='warn', n_jobs=None,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid=[{'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]}, {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring='neg_mean_squared_error', verbose=0)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                           scoring='neg_mean_squared_error')\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`param_grid` 的含义是首先评估所有第一个字典中`n_estimators`和`max_features` 的$3 \\times 4 =12 $种组合。然后尝试第二个dict中的12种组合。\n",
+    "\n",
+    "网格搜索会探索18种`RandomForestRegressor`的超参数组合，对每个模型训练5次。也就是说训练总共有 18x5=90次！"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 6, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features=6, max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=30, n_jobs=None, oob_score=False,\n",
+       "           random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 最佳估计器\n",
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">注意：如果 GridSearchCV 是以（默认值） refit=True 开始运行的，则一旦用交叉验证找 到了最佳的估计器，就会在整个训练集上重新训练。这是一个好方法，因为用更多数据训练会提高性能。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62992.62159303833 {'max_features': 2, 'n_estimators': 3}\n",
+      "54532.96059872892 {'max_features': 2, 'n_estimators': 10}\n",
+      "51967.94282434236 {'max_features': 2, 'n_estimators': 30}\n",
+      "59354.34264386558 {'max_features': 4, 'n_estimators': 3}\n",
+      "52213.623288410876 {'max_features': 4, 'n_estimators': 10}\n",
+      "49790.144004318696 {'max_features': 4, 'n_estimators': 30}\n",
+      "59407.20317606389 {'max_features': 6, 'n_estimators': 3}\n",
+      "51218.22513232331 {'max_features': 6, 'n_estimators': 10}\n",
+      "49368.51927431339 {'max_features': 6, 'n_estimators': 30}\n",
+      "58276.03404362918 {'max_features': 8, 'n_estimators': 3}\n",
+      "51672.455160961676 {'max_features': 8, 'n_estimators': 10}\n",
+      "49646.999851881505 {'max_features': 8, 'n_estimators': 30}\n",
+      "61489.81882324752 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "53834.15050903407 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "59448.32913547442 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52113.76426661117 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "57985.12031171852 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "50660.858214680375 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvres = grid_search.cv_results_\n",
+    "\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在这个例子中，我们通过设定超参数 `max_features` 为 6， `n_estimators` 为 30，得到了最佳方案。对这个组合，RMSE 的值是 49368，这比之前使用默认的超参数的值（52417）要稍微好一些。祝贺你，你成功地微调了最佳模型！\n",
+    "\n",
+    "> 提示：不要忘记，你可以像超参数一样处理数据准备的步骤。例如，网格搜索可以自动 判断是否添加一个你不确定的特征（比如，使用转换器 `CombinedAttributesAdder` 的超参数 `add_bedrooms_per_room` ）。它还能用相似的方法来自动找到处理异常值、缺失特征、 特征选择等任务的最佳方法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 随机搜索\n",
+    "\n",
+    "当搜索的超参数组合较少时，可以使用前面的网格搜索方法，但是当搜索空间较大时，最好使用`RandomizedSearchCV`，其使用方法和`GridSearchCV`很相似。其有两个优点：\n",
+    "\n",
+    "- 运行1000次，表示它会尝试每个超参数1000个不同的值，这笔网格搜索的范围大得多\n",
+    "\n",
+    "- 可以方便的设定搜索次数，控制超参数搜索的计算量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 集成方法\n",
+    "\n",
+    "另一种微调模型的方法是将表现最好的模型组合起来。组合（集成）后的性能往往比单独的模型要好，特别是当单独模型的误差类别不同时，在低7章会更深入的讲解。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 分析最佳模型及其误差\n",
+    "\n",
+    "通过分析最佳模型，往往可以获得对问题更深入的了解。比如`RandomForestRegressor`可以指出每个属性对于最初准确预测的相对重要性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8.10885857e-02, 6.98848363e-02, 4.13759219e-02, 1.78085118e-02,\n",
+       "       1.69667582e-02, 1.68758903e-02, 1.60395888e-02, 2.98863141e-01,\n",
+       "       7.06808101e-02, 1.06080139e-01, 7.60591816e-02, 6.04190359e-03,\n",
+       "       1.74998703e-01, 1.68024636e-04, 2.41066391e-03, 4.65734055e-03])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "feature_importances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.29886314076522874, 'median_income'),\n",
+       " (0.17499870300194223, 'INLAND'),\n",
+       " (0.10608013891272791, 'pop_per_hhold'),\n",
+       " (0.08108858569200382, 'longitude'),\n",
+       " (0.07605918158336865, 'bedrooms_per_room'),\n",
+       " (0.07068081010014889, 'rooms_per_hhold'),\n",
+       " (0.06988483626468828, 'latitude'),\n",
+       " (0.04137592192589068, 'housing_median_age'),\n",
+       " (0.0178085118197349, 'total_rooms'),\n",
+       " (0.016966758193240075, 'total_bedrooms'),\n",
+       " (0.016875890290277838, 'population'),\n",
+       " (0.016039588762731746, 'households'),\n",
+       " (0.006041903587036383, '<1H OCEAN'),\n",
+       " (0.004657340553250667, 'NEAR OCEAN'),\n",
+       " (0.002410663912014606, 'NEAR BAY'),\n",
+       " (0.00016802463571454832, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 将重要性和属性名组合\n",
+    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
+    "cat_encoder = new_full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有了这些信息，你可以丢弃一些不那么重要的属性了。例如`ocean_proximity` 属性只要 `INLAND` 一个类别就会、够了。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 用测试集评估系统\n",
+    "\n",
+    "对模型进行微调后，你终于有了一个性能足够好的模型了。现在就可以用测试集评估最后的模型了。这个过程没什么特殊的：从测试集得到预测值标签，运行`new_full_pipeline`转换数据，再用测试集评估最后的模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51205.19501417971\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_prepared = new_full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "\n",
+    "print(final_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "评估效果通常会比交叉验证效果差一些。如果你之前微调了很多超参数在验证集上得到了不错的性能，这通常不会在未知的数据集上有相同的效果。当你发现验证集效果不佳时，千万眼忍住不要去调节超参数来使验证集效果变好，因为这样的提升不能推广到新的数据集上！\n",
+    "\n",
+    "接下来就是项目的预上线阶段。\n",
+    "\n",
+    "展示你的方案：\n",
+    "\n",
+    "1. 学到了什么\n",
+    "2. 做了什么，没做什么\n",
+    "3. 做过什么假设\n",
+    "4. 系统的限制是什么\n",
+    "\n",
+    "记录下所有的事情，用漂亮的图表和容易记住的表达做一次精彩的展示"
    ]
   },
   {
